--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AlarmaVecinal"
         tools:targetApi="31">
+        <meta-data android:name="com.google.firebase.messaging.default_notification_icon" android:resource="@mipmap/ic_launcher" />
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_channel_id"
+            android:value="@string/default_notification_channel_id"/>
         <activity
             android:name=".MessageAlerta"
-            android:exported="false" />
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="com.alarmavecinal.app_TARGET_NOTIFICATION"></action>
+                <category android:name="android.intent.category.DEFAULT"></category>
+            </intent-filter>
+        </activity>
         <activity
             android:name=".MainActivityUser"
             android:exported="false"
