--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,21 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".ListaContacto"
+            android:exported="false" />
+        <activity
+            android:name=".GrupoContacto"
+            android:exported="false" />
+        <activity
+            android:name=".AgregarContacto"
+            android:exported="false" />
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_icon"
+            android:resource="@mipmap/ic_launcher" />
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_channel_id"
+            android:value="@string/default_notification_channel_id" />
+        <activity
             android:name=".MainActivityUser"
             android:exported="false"
             android:theme="@style/AppTheme.NoActionBar" />
